Fix row width calculation
Was appearing too small and off center

--- a/ui/src/style/theme/_grid.scss
+++ b/ui/src/style/theme/_grid.scss
@@ -26,7 +26,7 @@ $grid--col-12: 100%;
 
 .row {
   display: inline-block;
-  width: 100%;
+  width: calc(100% + #{$grid--gutter * 2});
   margin-left: -$grid--gutter;
   margin-right: -$grid--gutter;
 
